﻿- Added support for generating documents in the XPS file format.